
syntax = "proto3";
import "google/protobuf/empty.proto";

package proto;

option go_package = "./"; 

message AddUrlShortenerRequest {
  string url_path = 1;
 
}

message UrlShortener{
  int64 id = 1;
  string url_path = 2;
  string shortcut = 3;
}


message AddUrlShorteneResponse { 
  string result = 1; 
}

message GetAllUrlShortenersResponse { 
  repeated UrlShortener result = 1; 
}

service UrlShortenerService {
  rpc AddUrlShortener(AddUrlShortenerRequest) returns (AddUrlShorteneResponse);
  rpc GetAllUrlShorteners(google.protobuf.Empty) returns (GetAllUrlShortenersResponse);
 
}


 